Commend out unused data

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,9 +1,9 @@
 data:
-  personalEmail: {{ promptString "personal email" | quote }}
-  workEmail: {{ promptString "work email" | quote }}
-  name: {{ promptString "name" | quote }}
-  surname: {{ promptString "surname" | quote }}
-  hostname: {{ promptString "hostname" | quote }}
+  # personalEmail: {{ promptString "personal email" | quote }}
+  # workEmail: {{ promptString "work email" | quote }}
+  # name: {{ promptString "name" | quote }}
+  # surname: {{ promptString "surname" | quote }}
+  # hostname: {{ promptString "hostname" | quote }}
 
 edit:
   command: code
