Load homebrew if not available

--- a/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
@@ -8,7 +8,7 @@
 set -eufo pipefail
 
 # if brew is not recognized, try to load it from .zprofile
-if ! command -v brew &> /dev/null; then eval ../dot_zprofile; fi
+if ! command -v brew &> /dev/null; then eval "$({{- .chezmoi.sourceDir -}}/dot_zprofile)"; fi
 
 brew bundle --file=/dev/stdin <<EOF
 
