--- a/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
@@ -7,8 +7,19 @@
 
 set -eufo pipefail
 
-# if brew is not recognized, try to load it from .zprofile
-if ! command -v brew &> /dev/null; then eval "$({{- .chezmoi.sourceDir -}}/dot_zprofile)"; fi
+if ! command -v brew &> /dev/null; then
+  echo "Homebrew is not available on path. Trying to locate it..."
+{{ if eq .computer_architecture "arm64" -}}
+  alias brew=/opt/homebrew/bin/brew
+{{- else if eq .computer_architecture "x86_64" -}}
+  alias brew=/usr/local/bin/brew
+{{ end }}
+  echo "Aliased brew to: $brew"
+  if ! command -v brew &> /dev/null; then
+    echo "Homebrew is not installed propoerly. Exiting..."
+    exit 1
+  fi
+fi
 
 brew bundle --file=/dev/stdin <<EOF
 
