--- a/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_install-homebrew-packages.sh.tmpl
@@ -15,7 +15,7 @@ if ! command -v brew &> /dev/null; then
 {{- else if eq .computer_architecture "x86_64" -}}
   alias brew=/usr/local/bin/brew
   echo "Aliased brew to /usr/local/bin/brew"
-{{ end }}"
+{{ end }}
   if ! command -v brew &> /dev/null; then
     echo "Homebrew is not installed propoerly. Exiting..."
     exit 1
