feaet: install more tools

--- a/home/.chezmoiscripts/run_onchange_after_install-homebrew-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_install-homebrew-packages.sh.tmpl
@@ -41,14 +41,17 @@ cask "android-studio"
 cask "cursor"
 cask "expo-orbit"
 cask "iterm2"
+cask "zulu@17"
 
 # Apps
 
 cask "discord"
 cask "firefox"
+cask "grishka/grishka/neardrop"
 cask "microsoft-excel"
 cask "microsoft-outlook"
 cask "microsoft-word"
+cask "obsidian"
 cask "raycast"
 cask "rectangle"
 cask "Slack"
